[fix] vendor profile APIs
